feat: support idempotent library updates and version conflicts
